--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8084
-DATABASE_URL='mysql://c1bwxa1i98eo3mmtz7se:pscale_pw_BWV0sOlWET1Kav8NcROE4KZChL7md9qpqSM9VvXvILX@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://hbou15xs1tssuguzu2lq:pscale_pw_K14MlsAtPmMWU37wWAvn98c6IYnyziZOWEWWr5QUpRt@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
   
