--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8084
-DATABASE_URL='mysql://hbou15xs1tssuguzu2lq:pscale_pw_K14MlsAtPmMWU37wWAvn98c6IYnyziZOWEWWr5QUpRt@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://lkc8g5owwcn27ex3thot:pscale_pw_BX0cRkPqZsmDnA4kqrUbSTwRBcbOLpmgb1uQFrbN2tY@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
   
