--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8084
-DATABASE_URL='mysql://lkc8g5owwcn27ex3thot:pscale_pw_BX0cRkPqZsmDnA4kqrUbSTwRBcbOLpmgb1uQFrbN2tY@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://zngmbwloc2u94q4tmixz:pscale_pw_QrVUvJjn7ufS3RRdxfIsotq8HCf0HMmrCerK12JmOeB@aws.connect.psdb.cloud/approque?ssl={"rejectUnauthorized":true}'
   
