--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "start": "nodemon src/index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -16,6 +19,11 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+],
   "dependencies": {
     "@types/cors": "^2.8.17",
     "cloudinary": "^1.41.0",
